--- a/remote/production/emailapi.service
+++ b/remote/production/emailapi.service
@@ -1,6 +1,6 @@
 [Unit]
 # Description is a human-readable name for the service.
-Description=Greenlight API service
+Description=Send Email API service
 # Wait until PostgreSQL is running and the network is "up" before starting the service.
 After=network-online.target
 Wants=network-online.target
@@ -9,14 +9,14 @@ Wants=network-online.target
 StartLimitIntervalSec=600
 StartLimitBurst=5
 [Service]
-# Execute the API binary as the greenlight user, loading the environment variables from
-# /etc/environment and using the working directory /home/greenlight.
+# Execute the API binary as the username user, loading the environment variables from
+# /etc/environment and using the working directory /home/username.
 Type=exec
-User=andrew
-Group=andrew
+User=user
+Group=usergroup
 EnvironmentFile=/etc/environment
-WorkingDirectory=/home/andrew
-ExecStart=/home/andrew/sefemailapi -port=4000 -db-dsn=${EMAILAPI} -smtp-host=${SMTPHOST} -SMTPPORT=${SMTPPORT} -smtp-username=${SMTPUSERNAME} -smtp-password=${SMTPPASS} -env=production
+WorkingDirectory=/home/user
+ExecStart=/home/user/sefemailapi -port=4000 -db-dsn=${EMAILAPI} -smtp-host=${SMTPHOST} -SMTPPORT=${SMTPPORT} -smtp-username=${SMTPUSERNAME} -smtp-password=${SMTPPASS} -env=production
 # Automatically restart the service after a 5-second wait if it exits with a non-zero
 # exit code. If it restarts more than 5 times in 600 seconds, then the rate limit we
 # configured above will be hit and it won't be restarted anymore.
