--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,1 @@
-export EMAILAPI='postgres://andrew:OslpJueINuYbKRmc7UvNRjyqZ7bV1Byq@dpg-cogkfq21hbls738s5lm0-a.singapore-postgres.render.com/emailbulk?'
+export EMAILAPI='postgresql://postgres:1234@localhost:5432/email?sslmode=disable'
